--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 html, body {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+  background-color: black;
+  overflow: hidden;
 }
 
 canvas {
